program5.output
State 10 conflicts: 1 shift/reduce
State 18 conflicts: 1 shift/reduce
State 21 conflicts: 1 shift/reduce
State 25 conflicts: 1 shift/reduce
State 199 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: classDeclaration
    2        | program classDeclaration

    3 classDeclaration: CLASS ident classBody

    4 classBody: LBRACE RBRACE
    5          | LBRACE vardec consdec methdec RBRACE
    6          | LBRACE vardec consdec RBRACE
    7          | LBRACE consdec methdec RBRACE
    8          | LBRACE vardec methdec RBRACE
    9          | LBRACE vardec RBRACE
   10          | LBRACE consdec RBRACE
   11          | LBRACE methdec RBRACE

   12 vardec: INT ident SEMI
   13       | ident ident SEMI
   14       | vardec INT ident SEMI
   15       | vardec ident ident SEMI

   16 type: simpletype

   17 simpletype: INT
   18           | ident

   19 consdec: ident LPAREN parList RPAREN block
   20        | consdec ident LPAREN parList RPAREN block

   21 methdec: type ident LPAREN parList RPAREN block
   22        | VOID ident LPAREN parList RPAREN block
   23        | methdec type ident LPAREN parList RPAREN block
   24        | methdec VOID ident LPAREN parList RPAREN block
   25        | type ident LPAREN error

   26 parList: %empty
   27        | parameters

   28 parameters: parameter
   29           | parameters COMMA parameter

   30 parameter: type ident

   31 block: LBRACE lVarDecs statements RBRACE
   32      | LBRACE lVarDecs RBRACE
   33      | LBRACE statements RBRACE
   34      | LBRACE RBRACE
   35      | LBRACE statements error

   36 lVarDecs: type ident SEMI
   37         | lVarDecs type ident SEMI
   38         | type ident error

   39 statements: statement
   40           | statements statement

   41 statement: SEMI
   42          | name ASSIGN exp SEMI
   43          | name LPAREN arglist RPAREN SEMI
   44          | PRINT LPAREN arglist RPAREN SEMI
   45          | conStatement
   46          | WHILE LPAREN exp RPAREN statement
   47          | RETURN SEMI
   48          | RETURN exp SEMI
   49          | block

   50 name: THIS
   51     | ident
   52     | name DOT ident
   53     | name bracketexp
   54     | name error ident

   55 arglist: %empty
   56        | exps

   57 conStatement: IF LPAREN exp RPAREN statement
   58             | IF LPAREN exp RPAREN statement ELSE statement

   59 exps: exp
   60     | exp COMMA exps

   61 exp: name
   62    | NUM
   63    | NULLT
   64    | name LPAREN arglist RPAREN
   65    | READ LPAREN RPAREN
   66    | newexp
   67    | exp PLUS exp
   68    | exp MINUS exp
   69    | exp OR exp
   70    | exp TIMES exp
   71    | exp DIV exp
   72    | exp MOD exp
   73    | exp AND exp
   74    | exp EQ exp
   75    | exp NE exp
   76    | exp GE exp
   77    | exp LE exp
   78    | exp GT exp
   79    | exp LT exp
   80    | MINUS exp
   81    | PLUS exp
   82    | LPAREN exp RPAREN
   83    | NOT exp

   84 newexp: NEW ident LPAREN arglist RPAREN
   85       | NEW simpletype
   86       | NEW simpletype bracketexps
   87       | NEW simpletype multibrackets
   88       | NEW simpletype bracketexps multibrackets

   89 bracketexps: bracketexp
   90            | bracketexps bracketexp

   91 bracketexp: LBRACK exp RBRACK

   92 multibrackets: LBRACK RBRACK
   93              | multibrackets LBRACK RBRACK

   94 ident: ID


Terminals, with rules where they appear

$end (0) 0
error (256) 25 35 38 54
NUM (258) 62
RPAREN (259) 19 20 21 22 23 24 43 44 46 57 58 64 65 82 84
LPAREN (260) 19 20 21 22 23 24 25 43 44 46 57 58 64 65 82 84
NULLT (261) 63
INT (262) 12 14 17
THIS (263) 50
ID (264) 94
DOT (265) 52
LBRACK (266) 91 92 93
RBRACK (267) 91 92 93
SEMI (268) 12 13 14 15 36 37 41 42 43 44 47 48
READ (269) 65
NEW (270) 84 85 86 87 88
CLASS (271) 3
LBRACE (272) 4 5 6 7 8 9 10 11 31 32 33 34 35
RBRACE (273) 4 5 6 7 8 9 10 11 31 32 33 34
VOID (274) 22 24
COMMA (275) 29 60
PRINT (276) 44
WHILE (277) 46
RETURN (278) 47 48
IF (279) 57 58
ELSE (280) 58
ASSIGN (281) 42
EQ (282) 74
NE (283) 75
GE (284) 76
LE (285) 77
GT (286) 78
LT (287) 79
PLUS (288) 67 81
MINUS (289) 68 80
OR (290) 69
TIMES (291) 70
DIV (292) 71
MOD (293) 72
AND (294) 73
NEG (295)
UPLUS (296)
NOT (297) 83


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
program (44)
    on left: 1 2, on right: 0 2
classDeclaration (45)
    on left: 3, on right: 1 2
classBody (46)
    on left: 4 5 6 7 8 9 10 11, on right: 3
vardec (47)
    on left: 12 13 14 15, on right: 5 6 8 9 14 15
type (48)
    on left: 16, on right: 21 23 25 30 36 37 38
simpletype (49)
    on left: 17 18, on right: 16 85 86 87 88
consdec (50)
    on left: 19 20, on right: 5 6 7 10 20
methdec (51)
    on left: 21 22 23 24 25, on right: 5 7 8 11 23 24
parList (52)
    on left: 26 27, on right: 19 20 21 22 23 24
parameters (53)
    on left: 28 29, on right: 27 29
parameter (54)
    on left: 30, on right: 28 29
block (55)
    on left: 31 32 33 34 35, on right: 19 20 21 22 23 24 49
lVarDecs (56)
    on left: 36 37 38, on right: 31 32 37
statements (57)
    on left: 39 40, on right: 31 33 35 40
statement (58)
    on left: 41 42 43 44 45 46 47 48 49, on right: 39 40 46 57 58
name (59)
    on left: 50 51 52 53 54, on right: 42 43 52 53 54 61 64
arglist (60)
    on left: 55 56, on right: 43 44 64 84
conStatement (61)
    on left: 57 58, on right: 45
exps (62)
    on left: 59 60, on right: 56 60
exp (63)
    on left: 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78
    79 80 81 82 83, on right: 42 46 48 57 58 59 60 67 68 69 70 71 72
    73 74 75 76 77 78 79 80 81 82 83 91
newexp (64)
    on left: 84 85 86 87 88, on right: 66
bracketexps (65)
    on left: 89 90, on right: 86 88 90
bracketexp (66)
    on left: 91, on right: 53 89 90
multibrackets (67)
    on left: 92 93, on right: 87 88 93
ident (68)
    on left: 94, on right: 3 12 13 14 15 18 19 20 21 22 23 24 25 30
    36 37 38 51 52 54 84


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program           go to state 2
    classDeclaration  go to state 3


State 1

    3 classDeclaration: CLASS . ident classBody

    ID  shift, and go to state 4

    ident  go to state 5


State 2

    0 $accept: program . $end
    2 program: program . classDeclaration

    $end   shift, and go to state 6
    CLASS  shift, and go to state 1

    classDeclaration  go to state 7


State 3

    1 program: classDeclaration .

    $default  reduce using rule 1 (program)


State 4

   94 ident: ID .

    $default  reduce using rule 94 (ident)


State 5

    3 classDeclaration: CLASS ident . classBody

    LBRACE  shift, and go to state 8

    classBody  go to state 9


State 6

    0 $accept: program $end .

    $default  accept


State 7

    2 program: program classDeclaration .

    $default  reduce using rule 2 (program)


State 8

    4 classBody: LBRACE . RBRACE
    5          | LBRACE . vardec consdec methdec RBRACE
    6          | LBRACE . vardec consdec RBRACE
    7          | LBRACE . consdec methdec RBRACE
    8          | LBRACE . vardec methdec RBRACE
    9          | LBRACE . vardec RBRACE
   10          | LBRACE . consdec RBRACE
   11          | LBRACE . methdec RBRACE

    INT     shift, and go to state 10
    ID      shift, and go to state 4
    RBRACE  shift, and go to state 11
    VOID    shift, and go to state 12

    vardec      go to state 13
    type        go to state 14
    simpletype  go to state 15
    consdec     go to state 16
    methdec     go to state 17
    ident       go to state 18


State 9

    3 classDeclaration: CLASS ident classBody .

    $default  reduce using rule 3 (classDeclaration)


State 10

   12 vardec: INT . ident SEMI
   17 simpletype: INT .

    ID  shift, and go to state 4

    ID  [reduce using rule 17 (simpletype)]

    ident  go to state 19


State 11

    4 classBody: LBRACE RBRACE .

    $default  reduce using rule 4 (classBody)


State 12

   22 methdec: VOID . ident LPAREN parList RPAREN block

    ID  shift, and go to state 4

    ident  go to state 20


State 13

    5 classBody: LBRACE vardec . consdec methdec RBRACE
    6          | LBRACE vardec . consdec RBRACE
    8          | LBRACE vardec . methdec RBRACE
    9          | LBRACE vardec . RBRACE
   14 vardec: vardec . INT ident SEMI
   15       | vardec . ident ident SEMI

    INT     shift, and go to state 21
    ID      shift, and go to state 4
    RBRACE  shift, and go to state 22
    VOID    shift, and go to state 12

    type        go to state 14
    simpletype  go to state 15
    consdec     go to state 23
    methdec     go to state 24
    ident       go to state 25


State 14

   21 methdec: type . ident LPAREN parList RPAREN block
   25        | type . ident LPAREN error

    ID  shift, and go to state 4

    ident  go to state 26


State 15

   16 type: simpletype .

    $default  reduce using rule 16 (type)


State 16

    7 classBody: LBRACE consdec . methdec RBRACE
   10          | LBRACE consdec . RBRACE
   20 consdec: consdec . ident LPAREN parList RPAREN block

    INT     shift, and go to state 27
    ID      shift, and go to state 4
    RBRACE  shift, and go to state 28
    VOID    shift, and go to state 12

    type        go to state 14
    simpletype  go to state 15
    methdec     go to state 29
    ident       go to state 30


State 17

   11 classBody: LBRACE methdec . RBRACE
   23 methdec: methdec . type ident LPAREN parList RPAREN block
   24        | methdec . VOID ident LPAREN parList RPAREN block

    INT     shift, and go to state 27
    ID      shift, and go to state 4
    RBRACE  shift, and go to state 31
    VOID    shift, and go to state 32

    type        go to state 33
    simpletype  go to state 15
    ident       go to state 34


State 18

   13 vardec: ident . ident SEMI
   18 simpletype: ident .
   19 consdec: ident . LPAREN parList RPAREN block

    LPAREN  shift, and go to state 35
    ID      shift, and go to state 4

    ID  [reduce using rule 18 (simpletype)]

    ident  go to state 36


State 19

   12 vardec: INT ident . SEMI

    SEMI  shift, and go to state 37


State 20

   22 methdec: VOID ident . LPAREN parList RPAREN block

    LPAREN  shift, and go to state 38


State 21

   14 vardec: vardec INT . ident SEMI
   17 simpletype: INT .

    ID  shift, and go to state 4

    ID  [reduce using rule 17 (simpletype)]

    ident  go to state 39


State 22

    9 classBody: LBRACE vardec RBRACE .

    $default  reduce using rule 9 (classBody)


State 23

    5 classBody: LBRACE vardec consdec . methdec RBRACE
    6          | LBRACE vardec consdec . RBRACE
   20 consdec: consdec . ident LPAREN parList RPAREN block

    INT     shift, and go to state 27
    ID      shift, and go to state 4
    RBRACE  shift, and go to state 40
    VOID    shift, and go to state 12

    type        go to state 14
    simpletype  go to state 15
    methdec     go to state 41
    ident       go to state 30


State 24

    8 classBody: LBRACE vardec methdec . RBRACE
   23 methdec: methdec . type ident LPAREN parList RPAREN block
   24        | methdec . VOID ident LPAREN parList RPAREN block

    INT     shift, and go to state 27
    ID      shift, and go to state 4
    RBRACE  shift, and go to state 42
    VOID    shift, and go to state 32

    type        go to state 33
    simpletype  go to state 15
    ident       go to state 34


State 25

   15 vardec: vardec ident . ident SEMI
   18 simpletype: ident .
   19 consdec: ident . LPAREN parList RPAREN block

    LPAREN  shift, and go to state 35
    ID      shift, and go to state 4

    ID  [reduce using rule 18 (simpletype)]

    ident  go to state 43


State 26

   21 methdec: type ident . LPAREN parList RPAREN block
   25        | type ident . LPAREN error

    LPAREN  shift, and go to state 44


State 27

   17 simpletype: INT .

    $default  reduce using rule 17 (simpletype)


State 28

   10 classBody: LBRACE consdec RBRACE .

    $default  reduce using rule 10 (classBody)


State 29

    7 classBody: LBRACE consdec methdec . RBRACE
   23 methdec: methdec . type ident LPAREN parList RPAREN block
   24        | methdec . VOID ident LPAREN parList RPAREN block

    INT     shift, and go to state 27
    ID      shift, and go to state 4
    RBRACE  shift, and go to state 45
    VOID    shift, and go to state 32

    type        go to state 33
    simpletype  go to state 15
    ident       go to state 34


State 30

   18 simpletype: ident .
   20 consdec: consdec ident . LPAREN parList RPAREN block

    LPAREN  shift, and go to state 46

    $default  reduce using rule 18 (simpletype)


State 31

   11 classBody: LBRACE methdec RBRACE .

    $default  reduce using rule 11 (classBody)


State 32

   24 methdec: methdec VOID . ident LPAREN parList RPAREN block

    ID  shift, and go to state 4

    ident  go to state 47


State 33

   23 methdec: methdec type . ident LPAREN parList RPAREN block

    ID  shift, and go to state 4

    ident  go to state 48


State 34

   18 simpletype: ident .

    $default  reduce using rule 18 (simpletype)


State 35

   19 consdec: ident LPAREN . parList RPAREN block

    INT  shift, and go to state 27
    ID   shift, and go to state 4

    $default  reduce using rule 26 (parList)

    type        go to state 49
    simpletype  go to state 15
    parList     go to state 50
    parameters  go to state 51
    parameter   go to state 52
    ident       go to state 34


State 36

   13 vardec: ident ident . SEMI

    SEMI  shift, and go to state 53


State 37

   12 vardec: INT ident SEMI .

    $default  reduce using rule 12 (vardec)


State 38

   22 methdec: VOID ident LPAREN . parList RPAREN block

    INT  shift, and go to state 27
    ID   shift, and go to state 4

    $default  reduce using rule 26 (parList)

    type        go to state 49
    simpletype  go to state 15
    parList     go to state 54
    parameters  go to state 51
    parameter   go to state 52
    ident       go to state 34


State 39

   14 vardec: vardec INT ident . SEMI

    SEMI  shift, and go to state 55


State 40

    6 classBody: LBRACE vardec consdec RBRACE .

    $default  reduce using rule 6 (classBody)


State 41

    5 classBody: LBRACE vardec consdec methdec . RBRACE
   23 methdec: methdec . type ident LPAREN parList RPAREN block
   24        | methdec . VOID ident LPAREN parList RPAREN block

    INT     shift, and go to state 27
    ID      shift, and go to state 4
    RBRACE  shift, and go to state 56
    VOID    shift, and go to state 32

    type        go to state 33
    simpletype  go to state 15
    ident       go to state 34


State 42

    8 classBody: LBRACE vardec methdec RBRACE .

    $default  reduce using rule 8 (classBody)


State 43

   15 vardec: vardec ident ident . SEMI

    SEMI  shift, and go to state 57


State 44

   21 methdec: type ident LPAREN . parList RPAREN block
   25        | type ident LPAREN . error

    error  shift, and go to state 58
    INT    shift, and go to state 27
    ID     shift, and go to state 4

    RPAREN  reduce using rule 26 (parList)

    type        go to state 49
    simpletype  go to state 15
    parList     go to state 59
    parameters  go to state 51
    parameter   go to state 52
    ident       go to state 34


State 45

    7 classBody: LBRACE consdec methdec RBRACE .

    $default  reduce using rule 7 (classBody)


State 46

   20 consdec: consdec ident LPAREN . parList RPAREN block

    INT  shift, and go to state 27
    ID   shift, and go to state 4

    $default  reduce using rule 26 (parList)

    type        go to state 49
    simpletype  go to state 15
    parList     go to state 60
    parameters  go to state 51
    parameter   go to state 52
    ident       go to state 34


State 47

   24 methdec: methdec VOID ident . LPAREN parList RPAREN block

    LPAREN  shift, and go to state 61


State 48

   23 methdec: methdec type ident . LPAREN parList RPAREN block

    LPAREN  shift, and go to state 62


State 49

   30 parameter: type . ident

    ID  shift, and go to state 4

    ident  go to state 63


State 50

   19 consdec: ident LPAREN parList . RPAREN block

    RPAREN  shift, and go to state 64


State 51

   27 parList: parameters .
   29 parameters: parameters . COMMA parameter

    COMMA  shift, and go to state 65

    $default  reduce using rule 27 (parList)


State 52

   28 parameters: parameter .

    $default  reduce using rule 28 (parameters)


State 53

   13 vardec: ident ident SEMI .

    $default  reduce using rule 13 (vardec)


State 54

   22 methdec: VOID ident LPAREN parList . RPAREN block

    RPAREN  shift, and go to state 66


State 55

   14 vardec: vardec INT ident SEMI .

    $default  reduce using rule 14 (vardec)


State 56

    5 classBody: LBRACE vardec consdec methdec RBRACE .

    $default  reduce using rule 5 (classBody)


State 57

   15 vardec: vardec ident ident SEMI .

    $default  reduce using rule 15 (vardec)


State 58

   25 methdec: type ident LPAREN error .

    $default  reduce using rule 25 (methdec)


State 59

   21 methdec: type ident LPAREN parList . RPAREN block

    RPAREN  shift, and go to state 67


State 60

   20 consdec: consdec ident LPAREN parList . RPAREN block

    RPAREN  shift, and go to state 68


State 61

   24 methdec: methdec VOID ident LPAREN . parList RPAREN block

    INT  shift, and go to state 27
    ID   shift, and go to state 4

    $default  reduce using rule 26 (parList)

    type        go to state 49
    simpletype  go to state 15
    parList     go to state 69
    parameters  go to state 51
    parameter   go to state 52
    ident       go to state 34


State 62

   23 methdec: methdec type ident LPAREN . parList RPAREN block

    INT  shift, and go to state 27
    ID   shift, and go to state 4

    $default  reduce using rule 26 (parList)

    type        go to state 49
    simpletype  go to state 15
    parList     go to state 70
    parameters  go to state 51
    parameter   go to state 52
    ident       go to state 34


State 63

   30 parameter: type ident .

    $default  reduce using rule 30 (parameter)


State 64

   19 consdec: ident LPAREN parList RPAREN . block

    LBRACE  shift, and go to state 71

    block  go to state 72


State 65

   29 parameters: parameters COMMA . parameter

    INT  shift, and go to state 27
    ID   shift, and go to state 4

    type        go to state 49
    simpletype  go to state 15
    parameter   go to state 73
    ident       go to state 34


State 66

   22 methdec: VOID ident LPAREN parList RPAREN . block

    LBRACE  shift, and go to state 71

    block  go to state 74


State 67

   21 methdec: type ident LPAREN parList RPAREN . block

    LBRACE  shift, and go to state 71

    block  go to state 75


State 68

   20 consdec: consdec ident LPAREN parList RPAREN . block

    LBRACE  shift, and go to state 71

    block  go to state 76


State 69

   24 methdec: methdec VOID ident LPAREN parList . RPAREN block

    RPAREN  shift, and go to state 77


State 70

   23 methdec: methdec type ident LPAREN parList . RPAREN block

    RPAREN  shift, and go to state 78


State 71

   31 block: LBRACE . lVarDecs statements RBRACE
   32      | LBRACE . lVarDecs RBRACE
   33      | LBRACE . statements RBRACE
   34      | LBRACE . RBRACE
   35      | LBRACE . statements error

    INT     shift, and go to state 27
    THIS    shift, and go to state 79
    ID      shift, and go to state 4
    SEMI    shift, and go to state 80
    LBRACE  shift, and go to state 71
    RBRACE  shift, and go to state 81
    PRINT   shift, and go to state 82
    WHILE   shift, and go to state 83
    RETURN  shift, and go to state 84
    IF      shift, and go to state 85

    type          go to state 86
    simpletype    go to state 15
    block         go to state 87
    lVarDecs      go to state 88
    statements    go to state 89
    statement     go to state 90
    name          go to state 91
    conStatement  go to state 92
    ident         go to state 93


State 72

   19 consdec: ident LPAREN parList RPAREN block .

    $default  reduce using rule 19 (consdec)


State 73

   29 parameters: parameters COMMA parameter .

    $default  reduce using rule 29 (parameters)


State 74

   22 methdec: VOID ident LPAREN parList RPAREN block .

    $default  reduce using rule 22 (methdec)


State 75

   21 methdec: type ident LPAREN parList RPAREN block .

    $default  reduce using rule 21 (methdec)


State 76

   20 consdec: consdec ident LPAREN parList RPAREN block .

    $default  reduce using rule 20 (consdec)


State 77

   24 methdec: methdec VOID ident LPAREN parList RPAREN . block

    LBRACE  shift, and go to state 71

    block  go to state 94


State 78

   23 methdec: methdec type ident LPAREN parList RPAREN . block

    LBRACE  shift, and go to state 71

    block  go to state 95


State 79

   50 name: THIS .

    $default  reduce using rule 50 (name)


State 80

   41 statement: SEMI .

    $default  reduce using rule 41 (statement)


State 81

   34 block: LBRACE RBRACE .

    $default  reduce using rule 34 (block)


State 82

   44 statement: PRINT . LPAREN arglist RPAREN SEMI

    LPAREN  shift, and go to state 96


State 83

   46 statement: WHILE . LPAREN exp RPAREN statement

    LPAREN  shift, and go to state 97


State 84

   47 statement: RETURN . SEMI
   48          | RETURN . exp SEMI

    NUM     shift, and go to state 98
    LPAREN  shift, and go to state 99
    NULLT   shift, and go to state 100
    THIS    shift, and go to state 79
    ID      shift, and go to state 4
    SEMI    shift, and go to state 101
    READ    shift, and go to state 102
    NEW     shift, and go to state 103
    PLUS    shift, and go to state 104
    MINUS   shift, and go to state 105
    NOT     shift, and go to state 106

    name    go to state 107
    exp     go to state 108
    newexp  go to state 109
    ident   go to state 110


State 85

   57 conStatement: IF . LPAREN exp RPAREN statement
   58             | IF . LPAREN exp RPAREN statement ELSE statement

    LPAREN  shift, and go to state 111


State 86

   36 lVarDecs: type . ident SEMI
   38         | type . ident error

    ID  shift, and go to state 4

    ident  go to state 112


State 87

   49 statement: block .

    $default  reduce using rule 49 (statement)


State 88

   31 block: LBRACE lVarDecs . statements RBRACE
   32      | LBRACE lVarDecs . RBRACE
   37 lVarDecs: lVarDecs . type ident SEMI

    INT     shift, and go to state 27
    THIS    shift, and go to state 79
    ID      shift, and go to state 4
    SEMI    shift, and go to state 80
    LBRACE  shift, and go to state 71
    RBRACE  shift, and go to state 113
    PRINT   shift, and go to state 82
    WHILE   shift, and go to state 83
    RETURN  shift, and go to state 84
    IF      shift, and go to state 85

    type          go to state 114
    simpletype    go to state 15
    block         go to state 87
    statements    go to state 115
    statement     go to state 90
    name          go to state 91
    conStatement  go to state 92
    ident         go to state 93


State 89

   33 block: LBRACE statements . RBRACE
   35      | LBRACE statements . error
   40 statements: statements . statement

    error   shift, and go to state 116
    THIS    shift, and go to state 79
    ID      shift, and go to state 4
    SEMI    shift, and go to state 80
    LBRACE  shift, and go to state 71
    RBRACE  shift, and go to state 117
    PRINT   shift, and go to state 82
    WHILE   shift, and go to state 83
    RETURN  shift, and go to state 84
    IF      shift, and go to state 85

    block         go to state 87
    statement     go to state 118
    name          go to state 91
    conStatement  go to state 92
    ident         go to state 110


State 90

   39 statements: statement .

    $default  reduce using rule 39 (statements)


State 91

   42 statement: name . ASSIGN exp SEMI
   43          | name . LPAREN arglist RPAREN SEMI
   52 name: name . DOT ident
   53     | name . bracketexp
   54     | name . error ident
